assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Source+Code+Pro&display=swap');

:root {
  --background: rgb(30, 30, 30);
  --gold: #FFD700;
  --code-blue:rgb(151, 151, 255);
  --code-light-blue:rgb(169, 169, 255);
  --aqua: rgb(0, 232, 158);
  --code-orange:rgb(191, 137, 0);
  --blue: rgb(4, 4, 123);
  --white: rgb(241, 255, 250);
  --page-border: 20vw;
}

* {
  scroll-behavior: smooth;
}

body {
  background-image: linear-gradient(to right, #17123d, #3d387e, #323254);
  color: var(--white);
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

body * {
  font-family: 'Manrope', sans-serif;
  margin: 0;
  padding: 0;
}

h2 {
  margin-top: 20px;
  margin-bottom: 10px;
}

h3 {
  font-size: calc(12px + 0.5vw);
  margin-top: 20px;
}

p, button {
  font-size: calc(12px + 0.5vw);
}

a {
  color: var(--aqua);
  text-decoration: none;
}

hr {
  margin: 10px 0;
  border-color: rgb(112, 112, 112);
}

.orange {
  color: var(--code-orange) !important;
}

.gold {
  color: var(--gold) !important;
}

.full-width {
  width: 100%;

  max-width: 100%;
}

td {
  vertical-align:bottom
}

.col1 {
  font-family: 'Source Code Pro', monospace;
  padding-right: 10px;
  color: rgb(155, 155, 155);
  font-size: calc(12px + 0.5vw);
}

#sticky-nav {
  display: block;
  flex-direction: row;
  position: sticky;
  top: 0;
  background-color: var(--background);
  z-index: 99;
}

#sticky-nav > nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

#sticky-nav > nav:first-child {
  padding-left: 30px;
}

nav a {
  color: var(--white);
}

nav a:hover {
  color: var(--aqua);
}

nav ul{
  display: flex;
  position: relative;
  right: 0;
  justify-content: flex-end;
  list-style-type: none;
  margin: 5px 0;
}

nav li {
  margin: 0 20px;
  padding: 10px;
}

.nav-title {
  font-family: 'Manrope', sans-serif;
}

.nav-text {
  font-family: 'Source Code Pro', monospace;
  color: var(--code-blue);
}

footer { 
  background-color: var(--background);
  padding: 0 var(--page-border);
}

.section-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: calc(20vh - 90px);
}

.section-container > div {
  margin-top: 90px;
}

.section-width {
  width: 90%;
  max-width: 1200px;
  margin: 0 auto;
}

.snap {
  scroll-snap-align: start;
}

.box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
  padding: 5%;
  background-color: var(--background);
  box-shadow:
    30px 40px 20px 2px rgb(0, 0, 0);
}

.box p:last-of-type {
  margin-bottom: 10px;
}

header h1 {
  padding-left: 3vw;
  line-height: 1;
  font-size: calc(18px + 3.2vw);
}

.header-blurb {
  font-size: calc(12px + 0.5vw);
  color: var(--code-orange);
}

.heading-text {
  font-size: calc(12px + 0.8vw);
  font-family: 'Source Code Pro', monospace;
  color: var(--code-blue);
}

.header-inner-code {
  font-size: calc(10px + 0.6vw);
  font-family: 'Source Code Pro', monospace;
  color: var(--code-light-blue);
}

#header-list {
  font-size: calc(12px + 1vw);
}

#project-container {
  display: flex;
  flex-direction: column;
}

#project-container > div {
  display: flex;
  flex-direction: row;
}

#project-container > div > div {
  width: 50%;
}

#project-container td {
  font-size: calc(12px + 0.5vw);
  color: var(--code-orange);
}

#project-container td:first-of-type {
  padding-left: 0;
}

#project-container td:last-of-type {
  padding-right: 0;
}

#project-container td:nth-child(even) {
  color: white;
  padding: 0 5px;
}

.flex-col-apart {
  display: flex;
  flex-direction: column;
  /*justify-content: space-between;*/
  align-items: flex-start;
  height: 100%;
}

.project-btns {
  display: flex;
}

.project-btns div {
  background-color: var(--background);
  padding: 5px 10px;
  color: var(--aqua);
  font-size: calc(12px + 0.5vw);
  border: 1px solid var(--aqua);
  margin-right: 10px;

}

.project-btns div:hover {
  background-color: var(--aqua);
  color: var(--background);
  border-color: var(--aqua);
}


.white-btn {
  background-color: var(--white);
  color: var(--blue);
  border-radius: 5px;
}

#left-icons {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: fixed;
  bottom: 20px;
  left: 20px;
}

#left-icons i {
  color: var(--white);
  font-size: calc(8px + 0.9vw);
  padding: 5px 0;
}

#left-icons i:hover {
  color: var(--aqua);
}

.reveal{
  position: relative;
  transform: translateX(150px);
  opacity: 0;
  transition: 2s all ease;
}
.reveal.active{
  transform: translateY(0);
  opacity: 1;
}

@media only screen and (max-width: 800px) {
  #sticky-nav, #left-icons {
    display: none;
  }
}

